<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Contractor_Job_Detail">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_job_details"
            android:id="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="50sp" android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/lstJobDetail"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnSMS"/>
    <Button
            android:text="@string/title_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSMS"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnMaps"/>
    <Button
            android:text="@string/title_email"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:id="@+id/btnEmail" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/title_maps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnMaps" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnEmail"/>

</android.support.constraint.ConstraintLayout>