<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Client_Request" android:id="@+id/frameLayout3">
    <TextView
            android:text="@string/sub_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:textSize="18sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/title_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textAlignment="center"/>
    <Spinner
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cboBranch" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:textAlignment="center"/>
    <TextView
            android:text="@string/title_jobcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cboBranch" android:textSize="18sp" android:textAlignment="center"/>
    <Spinner
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:id="@+id/cboJobCat"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/title_duedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cboJobCat"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="18sp"
            android:layout_marginTop="8dp" android:textAlignment="center"/>
    <EditText
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtDueDate"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <TextView
            android:text="@string/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDueDate" android:textSize="18sp" android:textAlignment="center"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDesc" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" android:background="@drawable/edittext_bg"
            android:textAlignment="textStart"/>
    <Button
            android:text="@string/title_picture"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnPicture" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDesc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
    />
    <Button
            android:text="@string/title_send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp" android:id="@+id/btnSend"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/txtDesc"
            app:layout_constraintEnd_toStartOf="@+id/btnPicture" android:layout_marginEnd="10dp"/>
</android.support.constraint.ConstraintLayout>