<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Client_Contact" android:id="@+id/frameLayout">
    <Button
            android:text="@string/button_Email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnSMS" android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary" android:textColor="@color/grey"/>
    <Button
            android:text="@string/button_call"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnCall"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSMS" android:background="@color/colorPrimary"
            android:textColor="@color/grey"/>
    <Button
            android:text="@string/button_website"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnWebsite" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCall" android:background="@color/colorPrimary"
            android:textColor="@color/grey"/>
</android.support.constraint.ConstraintLayout>