<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/grey">

    <ImageView
            android:src="@drawable/bitlogo"
            android:layout_width="wrap_content"
            android:layout_height="175dp" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textAlignment="center" android:textSize="18sp" android:text="@string/Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="14sp" android:text="@string/UserName"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUsername" android:paddingLeft="30dp"
            android:textAlignment="textStart"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent" android:textAlignment="textStart"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnLogin" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
</android.support.constraint.ConstraintLayout>