<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Contractor_TimePicker">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_job_details"
            android:id="@+id/txtTitle2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="50sp" android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/pick_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="18sp"
            android:textAlignment="center" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <Button
            android:text="@string/title_sendsms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendSMS" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>