<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Contractor_Complete_Job" android:id="@+id/frameLayout5"
                                             android:background="@color/white">
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/lstJob"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginStart="64dp"
            app:layout_constraintHorizontal_bias="0.493" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:text="@string/select_job"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.52" android:textSize="24sp" android:textStyle="bold"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/loggedkm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/lstJob" android:textSize="18sp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtKm" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginStart="128dp"
            android:layout_marginEnd="128dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView13" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtKm" android:textSize="18sp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtDur"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:layout_marginStart="128dp" android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <Button
            android:text="@string/button_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnComplete"
            android:layout_marginEnd="128dp"
            android:layout_marginStart="128dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDur"/>
</android.support.constraint.ConstraintLayout>